--- a/package.json
+++ b/package.json
@@ -3,15 +3,40 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "anyproxy": "^4.1.3",
+    "brotli": "^1.3.2",
     "charset": "^1.0.1",
     "http-mitm-proxy": "^0.8.2",
-    "iconv": "^3.0.0",
-    "iconv-lite": "^0.6.0"
+    "iconv-lite": "^0.6.0",
+    "imagemin": "^7.0.1",
+    "sharp": "^0.25.4",
+    "zlib": "^1.0.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.3.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-es": "^3.19.61",
+    "eslint-config-standard-jsdoc": "^9.3.0",
+    "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-ava": "^10.3.1",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jquery": "^1.5.1",
+    "eslint-plugin-jsdoc": "^28.5.1",
+    "eslint-plugin-json": "^2.1.1",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0",
+    "fix": "eslint --fix index.js lib/*.js lib/*/*.js test/*.js"
   }
 }
