--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "anyproxy": "^4.1.3",
     "brotli": "^1.3.2",
     "charset": "^1.0.1",
+    "clean-css": "^4.2.3",
+    "html-minifier": "^4.0.0",
     "http-mitm-proxy": "^0.8.2",
     "iconv-lite": "^0.6.0",
     "imagemin": "^7.0.1",
     "sharp": "^0.25.4",
+    "uglify-js": "^3.10.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
