--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tusbar/cache-control": "^0.4.0",
     "anyproxy": "^4.1.3",
     "brotli": "^1.3.2",
     "charset": "^1.0.1",
