--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +23,7 @@
     "iconv-lite": "^0.6.0",
     "imagemin": "^7.0.1",
     "mime-types": "^2.1.27",
+    "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
     "uglify-js": "^3.10.0",
     "xxhash": "^0.3.0",
@@ -42,7 +46,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-simple-import-sort": "^5.0.3",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0",
-    "fix": "eslint --fix index.js lib/*.js lib/*/*.js test/*.js"
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0"
   }
 }
