--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "clean-css": "^4.2.3",
     "html-minifier": "^4.0.0",
     "http-mitm-proxy": "^0.8.2",
+    "iconv": "^3.0.0",
     "iconv-lite": "^0.6.0",
     "imagemin": "^7.0.1",
+    "koi8-r": "^1.0.0",
     "mime-types": "^2.1.27",
     "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
