--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-minifier": "^4.0.0",
     "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
+    "svgo": "^1.3.2",
     "uglify-js": "^3.10.0",
     "xxhash": "^0.3.0",
     "zlib": "^1.0.5"
