--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@tusbar/cache-control": "^0.4.0",
     "anyproxy": "^4.1.3",
+    "charset": "^1.0.1",
     "clean-css": "^4.2.3",
     "html-minifier": "^4.0.0",
+    "iconv-lite": "^0.6.0",
     "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
     "string.prototype.replaceall": "^1.0.3",
