--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "anyproxy": "^4.1.3",
     "charset": "^1.0.1",
     "clean-css": "^4.2.3",
+    "execa": "^4.0.2",
     "html-minifier": "^4.0.0",
     "iconv-lite": "^0.6.0",
     "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
     "string.prototype.replaceall": "^1.0.3",
     "svgo": "^1.3.2",
+    "temp-write": "^4.0.0",
     "uglify-js": "^3.10.0",
     "xxhash": "^0.3.0",
     "zlib": "^1.0.5"
