--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": ">10"
+    "node": ">13"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,13 +18,16 @@
     "charset": "^1.0.1",
     "clean-css": "^4.2.3",
     "execa": "^4.0.2",
+    "function-threads": "^1.0.3",
     "html-minifier": "^4.0.0",
     "iconv-lite": "^0.6.0",
+    "js-sha256": "^0.9.0",
     "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
     "string.prototype.replaceall": "^1.0.3",
     "svgo": "^1.3.2",
     "temp-write": "^4.0.0",
+    "threads": "^1.6.3",
     "uglify-js": "^3.10.0",
     "xxhash": "^0.3.0",
     "zlib": "^1.0.5"
