--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-minifier": "^4.0.0",
     "iconv-lite": "^0.6.0",
     "js-sha256": "^0.9.0",
+    "lowercase-keys": "^2.0.0",
     "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
     "string.prototype.replaceall": "^1.0.3",
