--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "anyproxy": "^4.1.3",
     "charset": "^1.0.1",
     "clean-css": "^4.2.3",
+    "del": "^5.1.0",
     "execa": "^4.0.2",
     "function-threads": "^1.0.3",
     "html-minifier": "^4.0.0",
@@ -28,6 +29,7 @@
     "string.prototype.replaceall": "^1.0.3",
     "svgo": "^1.3.2",
     "temp-write": "^4.0.0",
+    "tempy": "^0.5.0",
     "threads": "^1.6.3",
     "uglify-js": "^3.10.0",
     "xxhash": "^0.3.0",
