--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">13"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "fix": "eslint --fix *.js pipes/*.js"
   },
   "author": "",
   "license": "ISC",
