--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-minifier": "^4.0.0",
     "iconv-lite": "^0.6.1",
     "js-sha256": "^0.9.0",
+    "jschardet": "^2.2.1",
     "lowercase-keys": "^2.0.0",
     "pretty-bytes": "^5.3.0",
     "sharp": "^0.25.4",
