--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jschardet": "^2.2.1",
     "lowercase-keys": "^2.0.0",
     "pretty-bytes": "^5.3.0",
+    "prettysize": "^2.0.0",
     "sharp": "^0.25.4",
     "string.prototype.replaceall": "^1.0.3",
     "svgo": "^1.3.2",
