--- a/package.json
+++ b/package.json
@@ -17,44 +17,45 @@
     "@tusbar/cache-control": "^0.5.0",
     "anyproxy": "^4.1.3",
     "charset": "^1.0.1",
-    "clean-css": "^5.0.1",
+    "clean-css": "^5.1.2",
     "del": "^6.0.0",
-    "execa": "^5.0.0",
+    "execa": "^5.1.1",
     "function-threads": "^1.0.3",
     "html-minifier": "^4.0.0",
-    "iconv-lite": "^0.6.2",
+    "iconv-lite": "^0.6.3",
     "js-sha256": "^0.9.0",
-    "jschardet": "^2.2.1",
+    "jschardet": "^3.0.0",
     "lowercase-keys": "^2.0.0",
-    "pretty-bytes": "^5.4.1",
+    "mkdirp": "^0.5.5",
+    "pretty-bytes": "^5.6.0",
     "prettysize": "^2.0.0",
-    "sharp": "^0.27.1",
-    "string.prototype.replaceall": "^1.0.4",
-    "svgo": "^1.3.2",
-    "temp-write": "^4.0.0",
-    "tempy": "^1.0.0",
-    "threads": "^1.6.3",
-    "uglify-js": "^3.12.8",
+    "sharp": "^0.28.3",
+    "string.prototype.replaceall": "^1.0.5",
+    "svgo": "^2.3.0",
+    "temp-write": "^5.0.0",
+    "tempy": "^1.0.1",
+    "threads": "^1.6.5",
+    "uglify-js": "^3.13.9",
     "xxhash": "^0.3.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
-    "eslint": "^7.20.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-es": "^3.28.6",
+    "eslint-config-es": "^3.29.9",
     "eslint-config-standard-jsdoc": "^9.3.0",
     "eslint-plugin-async-await": "0.0.0",
-    "eslint-plugin-ava": "^11.0.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-ava": "^12.0.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsdoc": "^32.0.0",
-    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-jsdoc": "^35.3.2",
+    "eslint-plugin-json": "^3.0.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.11.0"
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0"
   }
 }
