--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": ">13"
+    "node": ">16"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,42 +14,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tusbar/cache-control": "^0.5.0",
     "anyproxy": "^4.1.3",
     "charset": "^1.0.1",
-    "clean-css": "^5.1.2",
-    "del": "^6.0.0",
     "execa": "^5.1.1",
-    "function-threads": "^1.0.3",
-    "html-minifier": "^4.0.0",
     "iconv-lite": "^0.6.3",
-    "js-sha256": "^0.9.0",
     "jschardet": "^3.0.0",
     "lowercase-keys": "^2.0.0",
-    "mkdirp": "^0.5.5",
-    "pretty-bytes": "^5.6.0",
+    "mkdirp": "^1.0.4",
     "prettysize": "^2.0.0",
-    "sharp": "^0.28.3",
     "string.prototype.replaceall": "^1.0.5",
-    "svgo": "^2.3.0",
-    "temp-write": "^5.0.0",
-    "tempy": "^1.0.1",
-    "threads": "^1.6.5",
-    "uglify-js": "^3.13.9",
-    "xxhash": "^0.3.0",
-    "zlib": "^1.0.5"
+    "tempy": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-es": "^3.29.9",
+    "eslint-config-es": "^3.30.15",
     "eslint-config-standard-jsdoc": "^9.3.0",
     "eslint-plugin-async-await": "0.0.0",
-    "eslint-plugin-ava": "^12.0.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-ava": "^13.0.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsdoc": "^35.3.2",
-    "eslint-plugin-json": "^3.0.0",
+    "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
