--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
   "dependencies": {
     "anyproxy": "^4.1.3",
     "charset": "^1.0.1",
-    "execa": "^5.1.1",
+    "eslint-plugin-unicorn": "^43.0.2",
+    "execa": "^6.1.0",
     "iconv-lite": "^0.6.3",
-    "lowercase-keys": "^2.0.0",
+    "lowercase-keys": "^3.0.0",
     "mkdirp": "^1.0.4",
     "prettysize": "^2.0.0",
-    "string.prototype.replaceall": "^1.0.5",
-    "tempy": "^2.0.0"
+    "string.prototype.replaceall": "^1.0.6",
+    "tempy": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-es": "^3.30.15",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard-jsdoc": "^9.3.0",
     "eslint-plugin-async-await": "0.0.0",
-    "eslint-plugin-ava": "^13.0.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-ava": "^13.2.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-jsdoc": "^39.3.4",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0"
   }
