--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "anyproxy": "^4.1.3",
-    "axios": "^1.2.3",
+    "axios": "^1.2.4",
     "charset": "^1.0.1",
     "eslint-plugin-unicorn": "^45.0.2",
     "execa": "^6.1.0",
@@ -27,6 +27,8 @@
     "tempy": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard-jsdoc": "^9.3.0",
@@ -34,7 +36,7 @@
     "eslint-plugin-ava": "^14.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsdoc": "^39.6.6",
+    "eslint-plugin-jsdoc": "^39.6.8",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-node": "^11.1.0",
