--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mkdirp": "^2.1.3",
     "prettysize": "^2.0.0",
     "string.prototype.replaceall": "^1.0.7",
+    "svgo": "^3.0.2",
     "tempy": "^3.0.0"
   },
   "devDependencies": {
